oracle-ccb-infra/deployment-oracle-ccb-infra.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oracle-ccb-infra
  labels:
    app: oracle-ccb-infra
    app.kubernetes.io/component: oracle-ccb-infra
    app.kubernetes.io/instance: oracle-ccb-infra
    app.kubernetes.io/part-of: ORACLE-CCB
spec:
  selector:
    matchLabels:
      deployment: oracle-ccb-infra
  template:
    metadata:
      labels:
        deployment: oracle-ccb-infra
    spec:
      hostname: ccbinfra
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: oracle-ccb-infra
          image: mmartofel/oracle-ccb-infra:2.8-fixed-ccbdb-name
          ports:
            - containerPort: 8002
              protocol: TCP
            - containerPort: 9002
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
